// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/azure createPr() should create and return a PR object 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/azure createPr() should create and return a PR object from base branch 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/azure createPr() should create and return a PR object with auto-complete set 1`] = `
Object {
  "autoCompleteSetBy": Object {
    "id": 123,
  },
  "branchName": "some-branch",
  "completionOptions": Object {
    "deleteSourceBranch": true,
    "squashMerge": true,
  },
  "createdBy": Object {
    "id": 123,
  },
  "displayNumber": "Pull Request #456",
  "pullRequestId": 456,
}
`;

exports[`platform/azure deleteLabel() Should delete a label 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/azure ensureComment add comment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it all state 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it close 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it open 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "open",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found not open 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure getBranchPr(branchName) should return the pr 1`] = `null`;

exports[`platform/azure getPr(prNo) should return a pr in the right format 1`] = `
Object {
  "labels": Array [
    "renovate",
  ],
  "pullRequestId": 1234,
}
`;

exports[`platform/azure getPrBody(input) returns updated pr body 1`] = `"https://github.com/foo/bar/issues/5 plus also [a link](https://github.com/foo/bar/issues/5)"`;

exports[`platform/azure getRepos() should return an array of repos 1`] = `
Array [
  Array [],
]
`;

exports[`platform/azure getRepos() should return an array of repos 2`] = `
Array [
  "prj1/repo1",
  "prj1/repo2",
]
`;

exports[`platform/azure initPlatform() should init 1`] = `
Object {
  "endpoint": "https://dev.azure.com/renovate12345/",
}
`;

exports[`platform/azure initRepo should initialise the config for a repo 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`platform/azure initRepo should initialise the config for a repo 2`] = `
Object {
  "baseBranch": "defBr",
  "isFork": false,
}
`;

exports[`platform/azure updatePr(prNo, title, body) should update the PR 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/azure updatePr(prNo, title, body) should update the PR without description 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;
